--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
 
   <footer id="footer">
     <div class="container-fluid">
-      <a href="#" class="footer-links"><i class="fa-brands fa-facebook"></i></a>
-      <a href="#" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#" class="footer-links"><i class="fa-brands fa-twitter"></i></a>
-      <a href="#" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
+      <a href="#" class="footer-links facebook"><i class="fa-brands fa-facebook"></i></a>
+      <a href="#" class="footer-links instagram"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#" class="footer-links twitter"><i class="fa-brands fa-twitter"></i></a>
+      <a href="#" class="footer-links youtube"><i class="fa-brands fa-youtube"></i></a>
       <p class="ftxt">© Copyright 2022 TinDog</p>
     </div>
   </footer>
